feat: Actualizar CRUD según nuevo modelo
Se actualiza el CRUD realizando cambios en los modelos y sus métodos, aplicando las modificaciones realizadas en el modelo de base de datos.

udistrital/Cumplidos_y_certificaciones_documentacion#96

@stevencol
